# python-lib

./: .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  test_input.txt
.github/workflows/: test.yml
{{cookiecutter.hyphenated}}/: README.md  pyproject.toml
{{cookiecutter.hyphenated}}/.github/workflows/: publish.yml  test.yml
{{cookiecutter.hyphenated}}/docs/: mkdocs.yml
{{cookiecutter.hyphenated}}/docs/docs/: index.md
{{cookiecutter.hyphenated}}/docs/source/: conf.py  index.rst  usage.rst
{{cookiecutter.hyphenated}}/tests/: test_{{cookiecutter.underscored}}.py
